# rustBankAPI

./: Cargo.toml  README.md  docker-compose.yaml
migration/src/: lib.rs  m20220101_000002_create_account_table.rs  m20240328_184823_create_transaction_table.rs  m20240329_105613_create_user_table.rs  main.rs
src/: main.rs
src/controllers/: account.rs  health.rs  mod.rs  transaction.rs  user.rs
src/entites/: account.rs  mod.rs  prelude.rs  transaction.rs  user.rs
src/models/: mod.rs  post_account_dto.rs  post_transaction_dto.rs  post_user_dto.rs
